# gitit-service

./: LICENSE  README.md  Todo.md  gitit-service.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
