name:                gitit-service
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/freiric/gitit-service#readme
license:             BSD3
license-file:        LICENSE
author:              Freiric Barral
maintainer:          freiric@gmail.com
copyright:           Copyright: (c) 2016 Freiric Barral
category:            Your Projects Category
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   Lib
  build-depends:     base              >= 4.7  &&   < 5
                   , aeson
                   , blaze-html        >= 0.8   && < 0.10
                   , blaze-markup      >= 0.7   && < 0.9
                   , bytestring        >= 0.10  && < 0.11
                   , cereal            >= 0.5.1 && < 0.6
                   , containers        >= 0.5   && < 0.6
                   , filestore         >= 0.5   && < 0.7
                   , filepath          >= 1.4   && < 1.5
                   , http-media        >= 0.6   && < 0.7
                   , http-api-data     >= 0.2   && < 0.4
                   , http-types        >= 0.9   && < 1.0
                   , mtl               >= 2.2   && < 2.3
                   , pandoc            >= 1.17  && < 2.1
                   , pandoc-types      >= 1.16  && < 1.18
                   , persistent        >= 2.2.4 && < 2.8
                   , servant-server    >= 0.4.4 && < 0.12
                   , servant-blaze     >= 0.4.4 && < 0.8
                   , text              >= 1.2   && < 1.3
                   , transformers      >= 0.4.2 && < 0.6
                   , utf8-string       >= 1.0   && < 1.1
                   , wai
                   , warp
                   , xss-sanitize      >= 0.3.5 && <0.4
                   , yaml              >= 0.8   && <0.9
  default-language:  Haskell2010

executable gitit-service
  hs-source-dirs:    app
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  build-depends:     base
                   , gitit-service
                   , warp
  default-language:  Haskell2010

test-suite gitit-service-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base
                   , gitit-service
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:  Haskell2010

source-repository head
  type:              git
  location:          https://github.com/freiric/gitit-service
